--- a/Modern.csproj
+++ b/Modern.csproj
@@ -9,26 +9,53 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="imagini\bec.png" />
+    <None Remove="imagini\gunoi.png" />
+    <None Remove="imagini\gym.jpg" />
+    <None Remove="imagini\kickboxer.png" />
     <None Remove="imagini\lacat.png" />
     <None Remove="imagini\masina-removebg-preview.png" />
+    <None Remove="imagini\renoire.png" />
+    <None Remove="imagini\somo.jpg" />
     <None Remove="imagini\usericon-removebg-preview.png" />
   </ItemGroup>
 
   <ItemGroup>
-    <Content Include="imagini\lacat.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
+    <Resource Include="imagini\lacat.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
     <Content Include="imagini\masina-removebg-preview.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="imagini\usericon-removebg-preview.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
+    <Resource Include="imagini\renoire.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="imagini\usericon-removebg-preview.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Data.Sqlite.Core" Version="9.0.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="imagini\bec.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="imagini\gunoi.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="imagini\gym.jpg">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="imagini\kickboxer.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="imagini\somo.jpg">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
   </ItemGroup>
 
 </Project>
